Fix spacing in paragraph 2

--- a/web/src/styles/_pdf.css
+++ b/web/src/styles/_pdf.css
@@ -103,6 +103,7 @@ ol li.list-number:before {
 .full-underline {
   margin-left: 50px;
   border-bottom: 0.7px solid rgb(49, 49, 50);
+  bottom: -0.7px;
 }
 
 /* this is only for display */
